--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@react-spring/web": "^9.7.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@types/js-cookie": "^3.0.3",
     "html-to-image": "^1.11.11",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
